Begin to add initial functionality for dynamic rendering.

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "ember-dynamic-partial",
+  "name": "ember-dynamic-render",
   "dependencies": {
     "handlebars": "~1.3.0",
     "jquery": "^1.11.1",
